cmake_minimum_required(VERSION 3.0.2)

set(src "./lib/libmultibit_trie.dylib")
set(dst "/usr/local/lib")

if(${CMAKE_SIZEOF_VOID_P} EQUAL 4)
    if(${MINGW})
        install(FILES ${src} DESTINATION ${dst} PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
    elseif(${MSVC})
        install(FILES ${src} DESTINATION ${dst} PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
    elseif(${APPLE})
        install(FILES ${src} DESTINATION ${dst} PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
    else()
        install(FILES ${src} DESTINATION ${dst} PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
    endif()
else()
    if(${MINGW})
        install(FILES ${src} DESTINATION ${dst} PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
    elseif(${MSVC})
        install(FILES ${src} DESTINATION ${dst} PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
    elseif(${APPLE})
        install(FILES ${src} DESTINATION ${dst} PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
    else()
        install(FILES ${src} DESTINATION ${dst} PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
    endif()
endif()
